# word_comparison

./: Cargo.toml  README.md
src/: comparison_list.rs  lib.rs  listed_keywords.rs  sentences.rs  word.rs  word_file.rs
word_comparison/: Cargo.toml
word_comparison/src/: comparison_list.rs  database_backend.rs  flatfile_database_backend.rs  lib.rs  listed_keywords.rs  near_words.rs  word_file.rs
word_comparison_demo_webserver/: Cargo.toml
word_comparison_demo_webserver/WebResources/: common.css  index.html  index.js  util.js
word_comparison_demo_webserver/src/: main.rs
